tests/bigint/invalid02.js
type InvalidNegDecimal = -1.0n; // error
